Basic electron app structure Menu buttons Debug console

--- a/electron/index.html
+++ b/electron/index.html
@@ -22,7 +22,8 @@
   
   <canvas id="canvas" width="480" height="300"></canvas>
   
-  <div id="consoleOut" class="console">
+  <div id="output" class="console">
+    App failed to start.
   </div>
 
   <script type="module" src="../main.js"></script>
