--- a/electron/index.html
+++ b/electron/index.html
@@ -11,25 +11,25 @@
 
 
   <div class="menu-container">
-    <button class="menu-button">Add particle</button>
-    <select class="menu-select">
-      <option value="0">Type</option>
+    <button id="addParticle" class="menu-button">Add particle</button>
+    <select id="particleType" class="menu-select">
+      <option value="type">Type</option>
       <option value="1">positive charge</option>
-      <option value="2">negative charge</option>
-      <option value="3">neutral charge</option>
+      <option value="-1">negative charge</option>
+      <option value="0">neutral charge</option>
     </select>
-    <button class="menu-button">Remove particle</button>
+    <button id="removeParticle" class="menu-button">Remove particle</button>
   </div>
 
 
   <div class="menu-container">
-    <button class="menu-button">Add bound</button>
-    <select class="menu-select">
-      <option value="0">Type</option>
+    <button id="addBound" class="menu-button">Add bound</button>
+    <select id="boundType" class="menu-select">
+      <option value="type">Type</option>
       <option value="1">rope</option>
       <option value="2">stick</option>
     </select>
-    <button class="menu-button">Remove bound</button>
+    <button id="removeBound" class="menu-button">Remove bound</button>
   </div>
 
 
