Particle adding and rendering before simulation

--- a/electron/index.html
+++ b/electron/index.html
@@ -14,9 +14,9 @@
     <button id="addParticle" class="menu-button">Add particle</button>
     <select id="particleType" class="menu-select">
       <option value="type">Type</option>
-      <option value="1">positive charge</option>
-      <option value="-1">negative charge</option>
-      <option value="0">neutral charge</option>
+      <option value="e">electron</option>
+      <option value="p">proton</option>
+      <option value="n">neutron</option>
     </select>
     <button id="removeParticle" class="menu-button">Remove particle</button>
   </div>
@@ -26,8 +26,8 @@
     <button id="addBound" class="menu-button">Add bound</button>
     <select id="boundType" class="menu-select">
       <option value="type">Type</option>
-      <option value="1">rope</option>
-      <option value="2">stick</option>
+      <option value="rope">rope</option>
+      <option value="stick">stick</option>
     </select>
     <button id="removeBound" class="menu-button">Remove bound</button>
   </div>
