--- a/electron/index.html
+++ b/electron/index.html
@@ -47,23 +47,25 @@
     </div>
 
     <div>
+      <input type="number" id="electromagneticForceStrength" name="settingsModifier" style="width: fit-content;">
+      <label for="gravityForce">Electromagnetic force strength</label>
+    </div>
+
+
+    <div>
       <input type="checkbox" id="gravity" name="settingsModifier">
       <label for="gravity">Gravity</label>
     </div>
 
     <div>
-      <input type="number" id="gravityForce" name="settingsModifier" style="width: fit-content;">
-      <label for="gravityForce">Gravity force</label>
+      <input type="number" id="gravityStrength" name="settingsModifier" style="width: fit-content;">
+      <label for="gravityForce">Gravity strength</label>
     </div>
+
 
     <div>
       <input type="checkbox" id="showVectors" name="settingsModifier">
       <label for="showVectors">Show vectors</label>
-    </div>
-
-    <div>
-      <input type="checkbox" id="test" name="settingsModifier">
-      <label for="test">Test</label>
     </div>
   </div>
 
