--- a/electron/index.html
+++ b/electron/index.html
@@ -47,8 +47,8 @@
     </div>
 
     <div>
-      <input type="number" id="electromagneticForceStrength" name="settingsModifier" style="width: fit-content;">
-      <label for="gravityForce">Electromagnetic force strength</label>
+      <input type="number" id="electromagneticForceStrength" name="settingsModifier" value="25" style="width: fit-content;">
+      <label for="electromagneticForceStrength">Electromagnetic force strength</label>
     </div>
 
 
@@ -58,14 +58,19 @@
     </div>
 
     <div>
-      <input type="number" id="gravityStrength" name="settingsModifier" style="width: fit-content;">
-      <label for="gravityForce">Gravity strength</label>
+      <input type="number" id="gravityStrength" name="settingsModifier" value="10" style="width: fit-content;">
+      <label for="gravityStrength">Gravity strength</label>
     </div>
 
 
     <div>
       <input type="checkbox" id="showVectors" name="settingsModifier">
       <label for="showVectors">Show vectors</label>
+    </div>
+
+    <div>
+      <input type="checkbox" id="infiniteVelocity" name="settingsModifier" checked>
+      <label for="infineteVelocity">Infinite velocity</label>
     </div>
   </div>
 
