Rubber rope works now

--- a/electron/index.html
+++ b/electron/index.html
@@ -25,12 +25,24 @@
 
   <div class="menu-container">
     <button id="addConnection" class="menu-button">Add connection</button>
-    <select id="ConnectionType" class="menu-select">
+    <select id="connectionType" class="menu-select">
       <option value="type">Type</option>
+      <option value="rubber">Rubber</option>
       <option value="rope">Rope</option>
       <option value="stick">Stick</option>
     </select>
     <button id="removeConnection" class="menu-button">Remove connection</button>
+  </div>
+
+
+  <div class="menu-container">
+    <button id="addPlatform" class="menu-button">Add platform</button>
+    <select id="platformType" class="menu-select">
+      <option value="type">Type</option>
+      <option value="bouncy">Bouncy</option>
+      <option value="stiff">Stiff</option>
+    </select>
+    <button id="removePlatform" class="menu-button">Remove platform</button>
   </div>
 
 
