--- a/electron/index.html
+++ b/electron/index.html
@@ -52,6 +52,12 @@
     <button id="settingsBtn" class="menu-button">Settings</button>
   </div>
 
+
+  <div id="objectData">
+    <p id="objectType">Nothing selected</p>
+  </div>
+
+
   <div id="settings" class="settings-container">
 
     <div>
